Refactor BGPParserTest
Do not use global state and improve structure a bit.

Change-Id: I3416d5ca93d754d29f0e47abb733e0f1b6f94e9c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>